--- a/thankyou.html
+++ b/thankyou.html
@@ -29,7 +29,7 @@
             <img src="./images/telegram.avif" loading="lazy" decoding="async" alt="telegram">
         </a>
     </div>
-    <script src="./js/thankYou.js"></script>
+    <script defer src="./js/thankYou.js"></script>
 </body>
 
 </html>
