--- a/thankyou.html
+++ b/thankyou.html
@@ -24,7 +24,7 @@
             qo’shilib oling</p>
         <img class="thenkYou__images" src="./images/arrow.svg" loading="lazy" decoding="async" alt="arrow">
 
-        <a class="thenkYou__btn" href="#">
+        <a class="thenkYou__btn" href="https://bit.ly/4s1Z2oa">
             Kanalga qo’shilish
             <img src="./images/telegram.avif" loading="lazy" decoding="async" alt="telegram">
         </a>
